css/style.css
@import url('https://fonts.cdnfonts.com/css/minecrafter-alt');
#game_field {
    background-image: url('https://blog.1a23.com/wp-content/uploads/sites/2/2020/02/pattern-23.svg'), linear-gradient( #d899f5, rgb(245, 214, 148));
    background-size: 400px;
    height: 100%;
    background-color: rgb(245, 214, 148);
    background-position: center;
    background-repeat: repeat;
}

html,
body {
    margin: 0;
    height: 100%;
    overflow: hidden;
    touch-action: none;
}

